rest-offer/src/main/k8s/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 95f47f9281315b861c295108f80d5abcc9ee202e
    app.quarkus.io/build-timestamp: 2022-10-05 - 05:37:32 +0000
  labels:
    app.kubernetes.io/name: offer
    app.kubernetes.io/version: 1.1.0
  name: offer
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8085
  selector:
    app.kubernetes.io/name: offer
    app.kubernetes.io/version: 1.1.0
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: offer
    app.kubernetes.io/version: 1.1.0
  name: offer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: offer
      app.kubernetes.io/version: 1.1.0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: offer
        app.kubernetes.io/version: 1.1.0
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: OFR_DB_NAME
              value: offerdb
            - name: OFR_HOSTNAME
              value: db # <--- This is the name of the service TODO - change to pg-db
            - name: OFR_PASSWORD
              value: mysecretpassword
            - name: OFR_PORT
              value: "5432"
            - name: OFR_USERNAME
              value: postgres
          image: docker.io/kmmraj/offer:1.1.6
          imagePullPolicy: IfNotPresent
          name: offer
          ports:
            - containerPort: 8085
              name: http
              protocol: TCP
